# N-Puzzle-AI

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  npuzzle-board.qml
ai/: AStar.cpp  AStar.hpp  Agent.cpp  Agent.hpp  CMakeLists.txt  Node.cpp  Node.hpp  Problem.cpp  Problem.hpp  ai_utils.hpp
ai/heuristics/: CMakeLists.txt  SearchStrategy.cpp  SearchStrategy.hpp  heuristics.cpp  heuristics.hpp
gui/: Board.hpp  BoardView.cpp  BoardView.hpp  CMakeLists.txt  Content.cpp  Content.hpp  MenuView.cpp  MenuView.hpp  Page.hpp  SolveView.cpp  SolveView.hpp  TileView.cpp  TileView.hpp  Window.cpp  Window.hpp  utils.cpp  utils.hpp
gui/gui_state/: BoardState.cpp  BoardState.hpp  CMakeLists.txt  Tile.hpp  UIState.cpp  UIState.hpp
gui/gui_utils/: CMakeLists.txt  CustomDialog.cpp  CustomDialog.hpp  gui_utils.cpp  gui_utils.hpp
gui/utils/: CustomDialog.cpp  CustomDialog.hpp
heuristics/: CMakeLists.txt  heuristics.cpp  heuristics.hpp
resources/: style.qss  styleResources.qrc
state/: BoardState.cpp  BoardState.hpp  CMakeLists.txt  Tile.cpp  Tile.hpp  UIState.cpp  UIState.hpp
test/maps/: map.txt  map10.txt  map8.txt
test/maps/invalid/: map4.txt  map5.txt  map95.txt
test/maps/valid/: map10.txt  map2.txt  map3-2-benchmark.txt  map3-2.txt  map3-benchmark.txt  map3.txt  map4 copy.txt  map4-2.txt  map4-benchmark.txt  map4.txt  map5-2-benchmark.txt  map5-2.txt  map5-3.txt  map5-benchmark.txt  map5.txt  map6.txt  map7-benchmark.txt  map7.txt  map8-benchmark.txt  map8.txt  map9.txt
test/memory/: README.md  minimal.supp  parse_valgrind_suppressions.sh
utils/: CMakeLists.txt  Tile.cpp  Tile.hpp  utils.cpp  utils.h
