add_subdirectory(gui_utils)
add_subdirectory(gui_state)

set(
	GUILIB_SRCS
	"${CMAKE_CURRENT_LIST_DIR}/Window.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/Window.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/Content.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/Content.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/MenuView.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/MenuView.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/Page.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/SolveView.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/SolveView.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/BoardView.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/BoardView.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/TileView.hpp"
	"${CMAKE_CURRENT_LIST_DIR}/TileView.cpp"
	${GUIUTILS_SRCS}
	${GUISTATE_SRCS}
	PARENT_SCOPE
)
